--- a/index.html
+++ b/index.html
@@ -61,9 +61,12 @@
 
             <img src="imagens/javascript.png" alt="Javascript" width="72" height="72" style="padding: 12px 0px 0px 16px;">
 
+            <img src="imagens/bootstrap.png" alt="Bootstrap" width="80" height="72">
+
             <img src="imagens/php.png" alt="PHP" width="128" height="80" style="padding: 8px 0px 0px 16px;">
 
             <img src="imagens/mysql.png" alt="MySQL" width="128" height="80">
+
         </div>
 
     </div>
@@ -169,9 +172,15 @@
     <!--CARDS CENTRAIS - PROJETOS DESENVOLVIDOS-->
     <div class="container-secoes">
 
+        <h1>Meus Projetos</h1>
+
         <section class="card-projetos">
             <div class="container-logos">
-
+                <a href="https://www.juninhoweb.com.br/logosescola"> <img src="imagens/logos-informatica-logo.png" alt="unisuam" width="160" height="64">
+                    <p>LOGOS - Escola de Profissões<br>
+                        <small>Site institucional para uma escola de cursos fictícia<br>
+                        Projeto desenvolvido como uma das avaliações do Curso Técnico em Informática Desenvolvedor de Sistemas do SENAC</small></p>
+                </a>
             </div>
             <div class="container-2"></div>
             <div class="container-3"></div>
